k8s/resources/auth/_namespace.yaml
# Namespace for OAuth2 Proxy and related resources
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth
